--- a/Client.Wpf/MainWindow.xaml
+++ b/Client.Wpf/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:Client.Wpf"
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="525">
-    <Grid>
+    <TabControl>
+        <TabItem Header="Connect">
+            <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -21,16 +23,25 @@
 
         <StackPanel Orientation="Vertical">
             <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
                 <TextBlock Text="Login : " VerticalAlignment="Center"/>
-                <TextBox x:Name="LoginTextBox" Width="200"  />
-                <TextBlock Text="Password : " VerticalAlignment="Center"/>
-                <TextBox x:Name="PasswordTextBox" Width="200" />
+                <TextBox x:Name="LoginTextBox" Width="200"  Grid.Column="2"/>
+                <TextBlock Text="Password : " VerticalAlignment="Center" Grid.Row="2"/>
+                <TextBox x:Name="PasswordTextBox" Width="200" Grid.Row="2" Grid.Column="2" />
             </Grid>
         </StackPanel>
         
         <TextBox x:Name="UrlTextBox" Grid.Column="1" Width="200" Height="29" />
 
         <Button Click="ConnectToCouchbaseSync" 
+                x:Name="ConnectButton"
                 Grid.Row="1" 
                 Grid.ColumnSpan="2" 
                 Margin="20">
@@ -39,16 +50,47 @@
         <Button Click="PullReplication" 
                 Grid.Row="2" 
                 Grid.ColumnSpan="2" 
-                Margin="20">
+                Margin="20,20,20,0"
+                x:Name="PullButton">
             Pull
         </Button>
-        <Button Click="PushReplication" 
-                Grid.Row="3" 
-                Grid.ColumnSpan="2" 
-                Margin="20">
-            Push
-        </Button>
-
-        <TextBlock x:Name="ContentTextBlock" />
+            <StackPanel Orientation="Vertical"
+                        Grid.Row="3" 
+                        Grid.ColumnSpan="2" 
+                        Margin="20">
+                <StackPanel Orientation="Horizontal"
+                            Margin="0,5">
+                    <TextBlock Text="Push Id"
+                               Margin="15, 0"/>
+                    <TextBox x:Name="PushId" MinWidth="200"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"
+                            Margin="0,5">
+                    <TextBlock Text="Push Name" Margin="15,0"/>
+                    <TextBox x:Name="PushNameValue" MinWidth="200"/>
+                </StackPanel>
+                <Button Click="PushReplication" 
+                        x:Name="PushButton">
+                    Push
+                </Button>
+            </StackPanel>
+            <ScrollViewer Grid.Row="4" Grid.ColumnSpan="2" MinHeight="200">
+            <TextBlock x:Name="ContentTextBlock" TextWrapping="Wrap"/>
+        </ScrollViewer>
     </Grid>
+        </TabItem>
+        <TabItem Header="Data" x:Name="DataTabItem" IsEnabled="false">
+            <ListView x:Name="DataListBox">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="Name" DisplayMemberBinding="{Binding name}" />
+                        <GridViewColumn Header="City" DisplayMemberBinding="{Binding city}" />
+                        <GridViewColumn Header="Code" DisplayMemberBinding="{Binding code}" />
+                        <GridViewColumn Header="Country" DisplayMemberBinding="{Binding country}" />
+                        <GridViewColumn Header="Description" DisplayMemberBinding="{Binding description}" />
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </TabItem>
+    </TabControl>
 </Window>
